tests/basic/semantics/unknown_statement.bas
10 FOOBAR 200: PRINT 5
20 PRINT 1
30 END
